avoid showing invisible text by setting font-display: swap

--- a/_sass/type.scss
+++ b/_sass/type.scss
@@ -1,20 +1,23 @@
 @font-face {
   font-family: "Crimson";
-  src: url("/assets/fonts/CrimsonText-Regular.ttf");
+  font-display: swap;
+  src: url("/assets/fonts/CrimsonText-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Crimson";
-  src: url("/assets/fonts/CrimsonText-SemiBold.ttf");
+  font-display: swap;
+  src: url("/assets/fonts/CrimsonText-SemiBold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Crimson";
-  src: url("/assets/fonts/CrimsonText-Italic.ttf");
+  font-display: swap;
+  src: url("/assets/fonts/CrimsonText-Italic.ttf") format("truetype");
   font-weight: normal;
   font-style: italic;
 }
